--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 section{
     border: 4px solid blue;
+
    
 }
 header, footer, main{
@@ -12,8 +13,9 @@ header, footer, main{
     
 }
 
-
-
+img {
+    max-width: 500px;
+}
 
 
 /*structure*/
@@ -21,4 +23,34 @@ header, footer, main{
     border: 4px solid orange;
     display: block;
     padding: 10px;
+
+    width: 98%;
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    border: 4px solid black;
+    min-height: 100vh;
+}
+
+main {
+    flex-grow: 1;
+    
+}
+
+pane {
+    display:flex;
+    gap: 40px;
+    
+}
+
+
+
+
+picture {
+    
 }
